# fractal

./: .clang-tidy  CMakeLists.txt  imgui.ini  readme.md
cmake/: use_cppreflection.cmake  use_eigen.cmake  use_everydaytools.cmake  use_fmtlib.cmake  use_glad.cmake  use_glfw.cmake  use_imgui.cmake  use_nlohmann.cmake  use_raylib.cmake
code/: main.cpp  primes.hpp
cpu_fractal/: CMakeLists.txt
cpu_fractal/code/: main.cpp
fractal/: CMakeLists.txt
fractal/code/: fractal_settings.cpp  (+4 more)
gpu_fractal/: CMakeLists.txt
gpu_fractal/code/: application.cpp  application.hpp  float.hpp  fractal_settings.hpp  integer.hpp  main.cpp  mandelbrot.hpp  mesh_vertex.hpp  read_file.cpp  rendering_backend_cpu.cpp  rendering_backend_cpu.hpp  rendering_backend_gpu.cpp  shader.hpp  type_id_widget.cpp  type_id_widget.hpp  vector.hpp  window.cpp  window.hpp
gpu_fractal/code/macro/: warning_suppress.hpp
gpu_fractal/code/name_cache/: name.cpp  name.hpp  name_cache.cpp  name_cache.hpp
gpu_fractal/code/opengl/: gl_api.hpp
gpu_fractal/code/opengl/debug/: annotations.cpp  gl_debug_messenger.cpp  gl_debug_messenger.hpp
gpu_fractal/code/reflection/: eigen_reflect.hpp  glm_reflect.hpp  register_types.hpp
gpu_fractal/code/shader/: define_handle.hpp  sampler_uniform.hpp  shader.cpp  shader.hpp  shader_define.cpp  shader_define.hpp  shader_uniform.cpp  shader_uniform.hpp  uniform_handle.hpp
gpu_fractal/code/template/: class_member_traits.hpp  tuple_type_by_index.hpp  type_to_gl_type.hpp
gpu_fractal/code/wrap/: wrap_boost_asio.hpp  wrap_eigen.hpp  wrap_glfw.hpp  wrap_glm.hpp  wrap_imgui.hpp
gpu_fractal/content/shaders/: just_texture.shader.json  mandelbrot.shader.json  simple.shader.json
gpu_fractal/content/shaders/src/: simple.frag  simple.vert
klgl/: CMakeLists.txt
klgl/klgl/: application.cpp  application.hpp  integer.hpp  read_file.cpp  read_file.hpp  type_id_widget.cpp  type_id_widget.hpp  window.cpp  window.hpp
klgl/klgl/macro/: warning_suppress.hpp
klgl/klgl/mesh/: mesh_data.cpp  mesh_data.hpp
klgl/klgl/name_cache/: name.cpp  name.hpp  name_cache.cpp  name_cache.hpp
klgl/klgl/opengl/: gl_api.cpp  gl_api.hpp
klgl/klgl/opengl/debug/: annotations.cpp  annotations.hpp  gl_debug_messenger.cpp  gl_debug_messenger.hpp
klgl/klgl/os/: os.cpp  os.hpp
klgl/klgl/reflection/: eigen_reflect.hpp  glm_reflect.hpp  register_types.hpp
klgl/klgl/shader/: define_handle.hpp  sampler_uniform.hpp  shader.cpp  shader.hpp  shader_define.cpp  shader_define.hpp  shader_uniform.cpp  shader_uniform.hpp  uniform_handle.hpp
klgl/klgl/template/: class_member_traits.hpp  get_enum_underlying.hpp  member_offset.hpp  on_scope_leave.hpp  tuple_type_by_index.hpp  type_to_gl_type.hpp
klgl/klgl/texture/: texture.cpp  texture.hpp
klgl/klgl/wrap/: wrap_eigen.hpp  wrap_glfw.hpp  wrap_glm.hpp  wrap_imgui.hpp
lib_fractal/: CMakeLists.txt
lib_fractal/code/: lib_fractal.cpp
lib_fractal/code/include/lib_fractal/: color.hpp  lib_fractal.hpp  pallete.hpp
(+12 files in other folders)
